[package]
name = "urlsup"
version = "2.2.0"
description = "CLI to validate URLs in files"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
keywords = ["cli", "ci", "github", "action", "links"]

repository = "https://github.com/simeg/urlsup"
homepage = "https://github.com/simeg/urlsup"
documentation = "https://github.com/simeg/urlsup/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2024"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
# Core CLI and async runtime
async-trait = "0.1"
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help", "usage", "error-context", "derive"] }
clap_complete = "4.5"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# HTTP client and networking (fixes RUSTSEC-2024-0421 via updated idna dependency)
reqwest = "0.12"

# File processing and pattern matching
grep = "0.3"
linkify = "0.10"
ignore = "0.4"
regex = "1.11"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# System utilities
num_cpus = "1.17"
once_cell = "1.21"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"

# Performance optimization
rayon = "1.10"                  # Parallel processing
rustc-hash = "2.0"              # Fast hashing
memchr = "2.7"                  # SIMD-optimized string searching

# Performance analysis
sysinfo = "0.36"                # System resource monitoring

[dev-dependencies]
tempfile = "3.20"
mockito = "1.7"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.0"

# Speed-optimized release profile for maximum binary performance
[profile.release]
opt-level = 3             # Maximum optimization for speed
lto = "fat"               # Full link-time optimization for maximum performance
codegen-units = 1         # Single codegen unit for best cross-function optimization
panic = "abort"           # Fastest panic handling
strip = true              # Remove debug symbols
debug = false             # No debug info for fastest compilation and execution
overflow-checks = false   # Disable runtime overflow checks for speed
incremental = false       # Disable incremental compilation for better optimization
