[package]
name = "urlsup"
version = "2.4.0"
description = "CLI to validate URLs in files"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
keywords = ["cli", "ci", "github", "action", "links"]

repository = "https://github.com/simeg/urlsup"
homepage = "https://github.com/simeg/urlsup"
documentation = "https://github.com/simeg/urlsup/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2024"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
# Core CLI and async runtime
async-trait = { version = "0.1", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help", "usage", "error-context", "derive"] }
clap_complete = { version = "4.5", default-features = false }
tokio = { version = "1.47", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

# HTTP client and networking (fixes RUSTSEC-2024-0421 via updated idna dependency)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }

# File processing and pattern matching
grep = { version = "0.3", default-features = false }
linkify = { version = "0.10", default-features = false }
ignore = { version = "0.4", default-features = false }
regex = { version = "1.11", default-features = false, features = ["std"] }

# Configuration and serialization
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }

# Interactive CLI features
dialoguer = { version = "0.11", default-features = false, features = ["password"] }

# System utilities
num_cpus = { version = "1.17", default-features = false }
once_cell = { version = "1.21", default-features = false }
indicatif = { version = "0.18", default-features = false }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
term_size = { version = "0.3", default-features = false }

# Performance optimization
rayon = { version = "1.10", default-features = false }  # Parallel processing
rustc-hash = { version = "2.0", default-features = false, features = ["std"] }  # Fast hashing
memchr = { version = "2.7", default-features = false }  # SIMD-optimized string searching

# Performance analysis
sysinfo = { version = "0.36", default-features = false, features = ["system"] }  # System resource monitoring

[dev-dependencies]
tempfile = { version = "3.20", default-features = false }
mockito = { version = "1.7", default-features = false }
assert_cmd = { version = "2.0", default-features = false }
predicates = { version = "3.1", default-features = false }
serial_test = { version = "3.0", default-features = false }
proptest = { version = "1.5", default-features = false, features = ["std"] }

# Speed-optimized release profile for maximum binary performance
[profile.release]
opt-level = 3             # Maximum optimization for speed
lto = "fat"               # Full link-time optimization for maximum performance
codegen-units = 1         # Single codegen unit for best cross-function optimization
panic = "abort"           # Fastest panic handling
strip = true              # Remove debug symbols
debug = false             # No debug info for fastest compilation and execution
overflow-checks = false   # Disable runtime overflow checks for speed
incremental = false       # Disable incremental compilation for better optimization
